// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TagInput component 1 renders as expected 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <TagInput
    hideModalButton={true}
    onFilterButtonClick={[MockFunction]}
    suggestions={
      Array [
        Object {
          "id": "tag1",
          "name": "tag1",
        },
        Object {
          "id": "tag2",
          "name": "tag2",
        },
        Object {
          "id": "tag3",
          "name": "tag3",
        },
        Object {
          "id": "tag4",
          "name": "tag4",
        },
        Object {
          "id": "tag5",
          "name": "tag5",
        },
        Object {
          "id": "tag6",
          "name": "tag6",
        },
      ]
    }
    tags={
      Array [
        Object {
          "id": "tag1",
          "name": "tag1",
        },
        Object {
          "id": "tag2",
          "name": "tag2",
        },
      ]
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        false,
        <div
          className="tagInput-comboBox"
        >
          <ReactTags
            allowBackspace={true}
            allowNew={false}
            autofocus={true}
            autoresize={false}
            delimiterChars={Array []}
            delimiters={
              Array [
                9,
                13,
              ]
            }
            handleAddition={[Function]}
            handleDelete={[Function]}
            maxSuggestionsLength={6}
            minQueryLength={1}
            placeholder="Add new filter tags..."
            suggestions={Array []}
            tagComponent={null}
            tags={
              Array [
                Object {
                  "id": "tag1",
                  "name": "tag1",
                },
                Object {
                  "id": "tag2",
                  "name": "tag2",
                },
              ]
            }
          />
        </div>,
        <div
          className="tagInput-clearAll"
          onClick={[Function]}
          role="presentation"
        >
          Clear All
        </div>,
      ],
      "className": "tagInput-filter",
    },
    "ref": null,
    "rendered": Array [
      false,
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <ReactTags
            allowBackspace={true}
            allowNew={false}
            autofocus={true}
            autoresize={false}
            delimiterChars={Array []}
            delimiters={
              Array [
                9,
                13,
              ]
            }
            handleAddition={[Function]}
            handleDelete={[Function]}
            maxSuggestionsLength={6}
            minQueryLength={1}
            placeholder="Add new filter tags..."
            suggestions={Array []}
            tagComponent={null}
            tags={
              Array [
                Object {
                  "id": "tag1",
                  "name": "tag1",
                },
                Object {
                  "id": "tag2",
                  "name": "tag2",
                },
              ]
            }
          />,
          "className": "tagInput-comboBox",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "allowBackspace": true,
            "allowNew": false,
            "autofocus": true,
            "autoresize": false,
            "delimiterChars": Array [],
            "delimiters": Array [
              9,
              13,
            ],
            "handleAddition": [Function],
            "handleDelete": [Function],
            "maxSuggestionsLength": 6,
            "minQueryLength": 1,
            "placeholder": "Add new filter tags...",
            "suggestions": Array [],
            "tagComponent": null,
            "tags": Array [
              Object {
                "id": "tag1",
                "name": "tag1",
              },
              Object {
                "id": "tag2",
                "name": "tag2",
              },
            ],
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "Clear All",
          "className": "tagInput-clearAll",
          "onClick": [Function],
          "role": "presentation",
        },
        "ref": null,
        "rendered": "Clear All",
        "type": "div",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          false,
          <div
            className="tagInput-comboBox"
          >
            <ReactTags
              allowBackspace={true}
              allowNew={false}
              autofocus={true}
              autoresize={false}
              delimiterChars={Array []}
              delimiters={
                Array [
                  9,
                  13,
                ]
              }
              handleAddition={[Function]}
              handleDelete={[Function]}
              maxSuggestionsLength={6}
              minQueryLength={1}
              placeholder="Add new filter tags..."
              suggestions={Array []}
              tagComponent={null}
              tags={
                Array [
                  Object {
                    "id": "tag1",
                    "name": "tag1",
                  },
                  Object {
                    "id": "tag2",
                    "name": "tag2",
                  },
                ]
              }
            />
          </div>,
          <div
            className="tagInput-clearAll"
            onClick={[Function]}
            role="presentation"
          >
            Clear All
          </div>,
        ],
        "className": "tagInput-filter",
      },
      "ref": null,
      "rendered": Array [
        false,
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <ReactTags
              allowBackspace={true}
              allowNew={false}
              autofocus={true}
              autoresize={false}
              delimiterChars={Array []}
              delimiters={
                Array [
                  9,
                  13,
                ]
              }
              handleAddition={[Function]}
              handleDelete={[Function]}
              maxSuggestionsLength={6}
              minQueryLength={1}
              placeholder="Add new filter tags..."
              suggestions={Array []}
              tagComponent={null}
              tags={
                Array [
                  Object {
                    "id": "tag1",
                    "name": "tag1",
                  },
                  Object {
                    "id": "tag2",
                    "name": "tag2",
                  },
                ]
              }
            />,
            "className": "tagInput-comboBox",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "allowBackspace": true,
              "allowNew": false,
              "autofocus": true,
              "autoresize": false,
              "delimiterChars": Array [],
              "delimiters": Array [
                9,
                13,
              ],
              "handleAddition": [Function],
              "handleDelete": [Function],
              "maxSuggestionsLength": 6,
              "minQueryLength": 1,
              "placeholder": "Add new filter tags...",
              "suggestions": Array [],
              "tagComponent": null,
              "tags": Array [
                Object {
                  "id": "tag1",
                  "name": "tag1",
                },
                Object {
                  "id": "tag2",
                  "name": "tag2",
                },
              ],
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "Clear All",
            "className": "tagInput-clearAll",
            "onClick": [Function],
            "role": "presentation",
          },
          "ref": null,
          "rendered": "Clear All",
          "type": "div",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`TagInput component 1 renders as expected 2`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <TagInput
    hideModalButton={true}
    onFilterButtonClick={[MockFunction]}
    suggestions={
      Array [
        Object {
          "id": "tag1",
          "name": "tag1",
        },
        Object {
          "id": "tag2",
          "name": "tag2",
        },
        Object {
          "id": "tag3",
          "name": "tag3",
        },
        Object {
          "id": "tag4",
          "name": "tag4",
        },
        Object {
          "id": "tag5",
          "name": "tag5",
        },
        Object {
          "id": "tag6",
          "name": "tag6",
        },
      ]
    }
    tags={
      Array [
        Object {
          "id": "tag1",
          "name": "tag1",
        },
        Object {
          "id": "tag2",
          "name": "tag2",
        },
      ]
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        false,
        <div
          className="tagInput-comboBox"
        >
          <ReactTags
            allowBackspace={true}
            allowNew={false}
            autofocus={true}
            autoresize={false}
            delimiterChars={Array []}
            delimiters={
              Array [
                9,
                13,
              ]
            }
            handleAddition={[Function]}
            handleDelete={[Function]}
            maxSuggestionsLength={6}
            minQueryLength={1}
            placeholder="Add new filter tags..."
            suggestions={Array []}
            tagComponent={null}
            tags={Array []}
          />
        </div>,
        <div
          className="tagInput-clearAll"
          onClick={[Function]}
          role="presentation"
        >
          Clear All
        </div>,
      ],
      "className": "tagInput-filter",
    },
    "ref": null,
    "rendered": Array [
      false,
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <ReactTags
            allowBackspace={true}
            allowNew={false}
            autofocus={true}
            autoresize={false}
            delimiterChars={Array []}
            delimiters={
              Array [
                9,
                13,
              ]
            }
            handleAddition={[Function]}
            handleDelete={[Function]}
            maxSuggestionsLength={6}
            minQueryLength={1}
            placeholder="Add new filter tags..."
            suggestions={Array []}
            tagComponent={null}
            tags={Array []}
          />,
          "className": "tagInput-comboBox",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "allowBackspace": true,
            "allowNew": false,
            "autofocus": true,
            "autoresize": false,
            "delimiterChars": Array [],
            "delimiters": Array [
              9,
              13,
            ],
            "handleAddition": [Function],
            "handleDelete": [Function],
            "maxSuggestionsLength": 6,
            "minQueryLength": 1,
            "placeholder": "Add new filter tags...",
            "suggestions": Array [],
            "tagComponent": null,
            "tags": Array [],
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "Clear All",
          "className": "tagInput-clearAll",
          "onClick": [Function],
          "role": "presentation",
        },
        "ref": null,
        "rendered": "Clear All",
        "type": "div",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          false,
          <div
            className="tagInput-comboBox"
          >
            <ReactTags
              allowBackspace={true}
              allowNew={false}
              autofocus={true}
              autoresize={false}
              delimiterChars={Array []}
              delimiters={
                Array [
                  9,
                  13,
                ]
              }
              handleAddition={[Function]}
              handleDelete={[Function]}
              maxSuggestionsLength={6}
              minQueryLength={1}
              placeholder="Add new filter tags..."
              suggestions={Array []}
              tagComponent={null}
              tags={Array []}
            />
          </div>,
          <div
            className="tagInput-clearAll"
            onClick={[Function]}
            role="presentation"
          >
            Clear All
          </div>,
        ],
        "className": "tagInput-filter",
      },
      "ref": null,
      "rendered": Array [
        false,
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <ReactTags
              allowBackspace={true}
              allowNew={false}
              autofocus={true}
              autoresize={false}
              delimiterChars={Array []}
              delimiters={
                Array [
                  9,
                  13,
                ]
              }
              handleAddition={[Function]}
              handleDelete={[Function]}
              maxSuggestionsLength={6}
              minQueryLength={1}
              placeholder="Add new filter tags..."
              suggestions={Array []}
              tagComponent={null}
              tags={Array []}
            />,
            "className": "tagInput-comboBox",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "allowBackspace": true,
              "allowNew": false,
              "autofocus": true,
              "autoresize": false,
              "delimiterChars": Array [],
              "delimiters": Array [
                9,
                13,
              ],
              "handleAddition": [Function],
              "handleDelete": [Function],
              "maxSuggestionsLength": 6,
              "minQueryLength": 1,
              "placeholder": "Add new filter tags...",
              "suggestions": Array [],
              "tagComponent": null,
              "tags": Array [],
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "Clear All",
            "className": "tagInput-clearAll",
            "onClick": [Function],
            "role": "presentation",
          },
          "ref": null,
          "rendered": "Clear All",
          "type": "div",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
